prodMetadata/src/objects/Sponsorship_Ticket__c.object
<CustomObject>
    <description>gala sponsorship or ticket selections</description>
    <fields>
        <fullName>CampaignMemberId__c</fullName>
        <label>Campaign Member Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Platinum Hero</fullName>
                </value>
                <value>
                    <fullName>Hero Sponsor</fullName>
                </value>
                <value>
                    <fullName>Valor Sponsor</fullName>
                </value>
                <value>
                    <fullName>Champion Sponsor</fullName>
                </value>
                <value>
                    <fullName>Ally Sponsor</fullName>
                </value>
                <value>
                    <fullName>Supporter Individual</fullName>
                </value>
                <value>
                    <fullName>Friend Individual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Sponsorship/Ticket</label>
    <nameField>
        <displayFormat>TN-{0}</displayFormat>
        <label>Sponsorship/Ticket Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sponsorships/Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FourOrFewerSupporterIndividualTickets</fullName>
        <active>true</active>
        <description>no more than 4 $2500 tickets (supporter individual) can be purchased at one time</description>
        <errorConditionFormula>ISPICKVAL(Type__c, &apos;Supporter Individual&apos;) &amp;&amp;
Quantity__c &gt; 4</errorConditionFormula>
        <errorMessage>We have limited purchase of Supporter Individual ($2500) to four tickets per purchaser. Please contact heroesgala@iava.org with any questions.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TwoOrFewerFriendIndividualTickets</fullName>
        <active>true</active>
        <description>no more than 2 $1250 tickets (friend individual) can be purchased at one time</description>
        <errorConditionFormula>ISPICKVAL(Type__c, &apos;Friend Individual&apos;) &amp;&amp;
Quantity__c &gt; 2</errorConditionFormula>
        <errorMessage>We have limited purchase of Friend Individual ($1250) to two tickets per purchaser. Please contact heroesgala@iava.org with any questions.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>cannotChangeCampaignMemberId</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(CampaignMemberId__c)</errorConditionFormula>
        <errorDisplayField>CampaignMemberId__c</errorDisplayField>
        <errorMessage>You cannot change the campaign member id.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>cannotChangeTicketType</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(Type__c)</errorConditionFormula>
        <errorDisplayField>Type__c</errorDisplayField>
        <errorMessage>You cannot change the ticket type.</errorMessage>
    </validationRules>
</CustomObject>